Restore header alignment with carousel enabled (fix #1866)

--- a/static/css/restyle.less
+++ b/static/css/restyle.less
@@ -374,7 +374,6 @@ button.search-button {
   display: block !important;
   height: auto !important;
   margin-left: -210px;
-  margin-bottom: 15px;
   min-height: 0 !important;
   opacity: 1 !important;
   visibility: visible !important;
@@ -396,8 +395,8 @@ button.search-button {
   box-shadow: none;
 }
 
-.primary.island {
-  border-top: solid 1px @primary-blue;
+.restyle .primary .island {
+  padding-top: 0;
 }
 
 #promos .promo-purple {
@@ -622,8 +621,8 @@ button.good {
   margin-top: 0;
 }
 
-.shift-secondary {
-  margin-top: 290px !important;
+.restyle.home .shift-secondary {
+  margin-top: 300px;
 }
 
 .home .secondary {
